--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Awesome Site Title
-email: your-email@domain.com
+title: Coding 4 kids
+email: nunofilipesantos@gmail.com
 description: >
-  Awesome site description here
+  Iniciativa de Ensino de Programação para Jovens
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://coding4kids.github.io/coding4kids" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
-name: 'Your Name'
+name: 'Nuno Santos'
 bio: >
-  Mea suas vituperatoribus et, virtute corpora quaestio cum ut.
-  Ne solet nostrum complectitur pri, vis ut inani populo.
+  EdTech Researcher
 author_image: "/assets/images/author.jpg"
 twitter_username: jekyllrb
 github_username:  jekyll
