--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
   Iniciativa de Ensino de Programação para Jovens
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://coding4kids.github.io/coding4kids/" # the base hostname & protocol for your site
+#url: "http://coding4kids.github.io/coding4kids/" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
 name: 'Nuno Santos'
