--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: nunofilipesantos@gmail.com
 description: >
   Iniciativa de Ensino de Programação para Jovens
 logo: "/assets/images/logo.jpg"
-#baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://coding4kids.github.io" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
